--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dbushell-grunt-mustatic": "^0.1.1",
     "express": "^4.13.1",
     "fs-extra": "^0.30.0",
+    "md5-file": "^4.0.0",
     "mustache": "^2.1.2",
     "os-homedir": "^1.0.2",
     "qrcode-terminal": "^0.11.0",
